Добавлена форма мультиплеерной игры и сделан чат

--- a/TTTM.csproj
+++ b/TTTM.csproj
@@ -51,6 +51,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormMultiplayer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMultiplayer.Designer.cs">
+      <DependentUpon>FormMultiplayer.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormSettings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,9 @@
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMultiplayer.resx">
+      <DependentUpon>FormMultiplayer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormSettings.resx">
       <DependentUpon>FormSettings.cs</DependentUpon>
