--- a/TTTM.csproj
+++ b/TTTM.csproj
@@ -52,6 +52,9 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdvancedComboBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="AI.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="Form1.cs">
@@ -95,6 +98,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ServerList.cs" />
     <Compile Include="StartMultiplayerGame.cs">
       <SubType>Form</SubType>
     </Compile>
