--- a/TTTM.csproj
+++ b/TTTM.csproj
@@ -152,6 +152,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Resources\upd.bat" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
