Почистил код, убрав закоменченный код который более не нужен, добавил тудушник

--- a/TTTM.csproj
+++ b/TTTM.csproj
@@ -164,6 +164,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ToDo.txt" />
     <EmbeddedResource Include="Resources\LiteNetLib.dll" />
     <Content Include="Resources\Stun_servers.txt" />
     <None Include="help3.png" />
