Таймер в форме заменён на таск

--- a/Tic Tac Toe WPF Remake.csproj
+++ b/Tic Tac Toe WPF Remake.csproj
@@ -61,7 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="BaseGameWindow.cs" />
+    <Compile Include="ExtensionClass.cs" />
     <Compile Include="Lumisoft_edited.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
