--- a/Tic Tac Toe WPF Remake.csproj
+++ b/Tic Tac Toe WPF Remake.csproj
@@ -25,7 +25,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -176,6 +176,18 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\StartSingleGameBG.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\MPStartCreateServer355.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\MPStartForeground.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\MPStartMenuBG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\MPStartServerList50-100-25-65.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
