Заменил таймеры на таски в главном меню и вынес верхний элемент как отдельный UserControl

--- a/Tic Tac Toe WPF Remake.csproj
+++ b/Tic Tac Toe WPF Remake.csproj
@@ -71,6 +71,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="ServerList.cs" />
+    <Compile Include="TitleBorder.xaml.cs">
+      <DependentUpon>TitleBorder.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WindowAbout.xaml.cs">
       <DependentUpon>WindowAbout.xaml</DependentUpon>
     </Compile>
@@ -105,6 +108,10 @@
       <DependentUpon>MainMenuWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="TitleBorder.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="WindowAbout.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
