Добавил отображение эмоций

--- a/Tic Tac Toe WPF Remake.csproj
+++ b/Tic Tac Toe WPF Remake.csproj
@@ -196,6 +196,9 @@
   <ItemGroup>
     <Resource Include="Resources\MPStartServerList50-100-25-65.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Emotions\1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
